fixing image going out of viewport

--- a/faq-accordion-card-main/style.css
+++ b/faq-accordion-card-main/style.css
@@ -25,6 +25,7 @@
 body {
   height: 100vh;
   display: flex;
+  padding: 2rem;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -116,13 +117,13 @@ p {
 
 @media only screen and (min-width: 570px) {
   .container {
-    width: 60%;
+    width: 50%;
   }
 }
 
 @media only screen and (min-width: 850px) {
   .container {
-    width: 40%;
+    width: 35%;
   }
 }
 
